Name:                   vinegar-xml
Version:                0.0.0
Synopsis:               XML Encoding and Schema for Vinegar Library
License:                BSD3
Author:                 Eric McCorkle
Maintainer:             eric@metricspace.net
Stability:              Development
Category:               Languages
Build-type:             Simple
Cabal-version:          >= 1.16
Homepage:               https://github.com/saltlang/hs-vinegar-xml
Bug-Reports:            https://github.com/saltlang/hs-vinegar-xml/issues

Source-Repository head
  Type: git
  Location: git@github.com:saltlang/hs-vinegar-xml.git

Test-Suite UnitTest
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  hs-source-dirs:       test/unit
  build-depends:        base >= 4.8 && < 5, Cabal >= 1.16.0, vinegar-xml

Library
  default-language:     Haskell2010
  build-depends:        base, bytestring, array, hexpat
  hs-source-dirs:       src/
  exposed-modules:

